trial-list-1.yaml
---
apiVersion: "v1"
kind: "List"
items:
- apiVersion: "v1"
  kind: "Service"
  metadata:
    name: "trialservice"
  spec:
    selector:
      app: "trialdeployment"
    ports:
    - protocol: TCP
      port: 8080
- apiVersion: "apps/v1"
  kind: "Deployment"
  metadata:
    name: "trial-deployment"
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: "trialdeployment"
    template:
      metadata:
        labels:
          app: "trialdeployment"
      spec:
        containers:
        - name: "trialdeployment"
          image: "trial:latest"
          imagePullPolicy: "Never"
          resources:
            limits:
              cpu: 100m
              memory: "128Mi"
            requests:
              cpu: 100m
              memory: "128Mi"
          ports:
          - containerPort: 8080
