ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "ingress-nginx-trial-service"
spec:
  ingressClassName: "ingress-nginx-trial-service"
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "trialservice"
            port:
              number: 8080
